--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <dimen name="activity_horizontal_margin_small">13dp</dimen>
+    <dimen name="activity_horizontal_margin_medum">40dp</dimen>
+    <dimen name="activity_horizontal_margin_large">150dp</dimen>
+
+
+    <dimen name="text_size_small">17sp</dimen>
+    <dimen name="text_size_medium">20sp</dimen>
+    <dimen name="text_size_large">23sp</dimen>
+    <dimen name="text_size_xlarge">30sp</dimen>
+
 </resources>
