--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
+    <dimen name="activity_vertical_margin_small">10dp</dimen>
 
     <dimen name="activity_horizontal_margin_small">13dp</dimen>
     <dimen name="activity_horizontal_margin_medum">40dp</dimen>
@@ -13,5 +13,7 @@
     <dimen name="text_size_medium">20sp</dimen>
     <dimen name="text_size_large">23sp</dimen>
     <dimen name="text_size_xlarge">30sp</dimen>
+
+    <dimen name="play_icon_size">40dp</dimen>
 
 </resources>
