--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="@string/title_trailer"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
         />
 
@@ -101,7 +101,27 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
         ></ListView>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin_small"
+        android:background="@android:color/darker_gray" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:text="@string/title_reviews"
+        android:textSize="16sp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
+        />
+
+    <ListView
+        android:id="@+id/reviews_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
+        ></ListView>
 
 </LinearLayout>
 </ScrollView>
