--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -28,7 +28,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,11 +44,19 @@
             android:layout_height="wrap_content" />
 
 
+        <android.support.v7.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
+            >
+
+
+
         <TextView
             android:id="@+id/mrelease"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
             android:layout_toRightOf="@+id/mposter"
             android:textStyle="bold"
             android:textSize="@dimen/text_size_large" />
@@ -58,14 +66,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/mrelease"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin_small"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
             android:layout_toRightOf="@+id/mposter"
             android:textStyle="italic"
             android:textSize="@dimen/text_size_small" />
 
 
-    </RelativeLayout>
+         <Button
+             android:id="@+id/button_fav"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="@string/fav_text"
+             android:textAllCaps="true" />
+
+         </android.support.v7.widget.LinearLayoutCompat>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/mdesc"
