--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="101"
         android:title="@string/top"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_fav"
+        android:orderInCategory="102"
+        android:title="@string/fav"
+        app:showAsAction="never" />
 </menu>
